@@ -79,3 +79,4 @@ Lars Herschke <lhersch@dssgmbh.de>
 Roman Rusyaev <rusyaev.rm@gmail.com>
 Väinö Liukko <vaino.liukko@gmail.com>
 Nia Alarie <nia@NetBSD.org>
+fn ⌃ ⌥ (FnControlOption)
