@@ -27,4 +27,5 @@ if(MSVC)
   set_source_files_properties( bswap.c misc.c cl_half.c PROPERTIES LANGUAGE CXX )
 endif(MSVC)
 add_library("poclu" STATIC bswap.c misc.c cl_half.c)
+target_link_libraries("poclu" ${POCL_LIBRARY_NAME})
 harden("poclu")
